--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.3.5",
     "element-plus": "^2.3.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
